--- a/nginx/templates/default/default-site.erb
+++ b/nginx/templates/default/default-site.erb
@@ -3,9 +3,18 @@ server {
   server_name  127.0.0.1;
 
   access_log  <%= node[:nginx][:log_dir] %>/localhost.access.log;
+  root   /usr/share/nginx/<%= node[:nginx][:root_suffix] %>;
 
   location / {
-    root   /var/www/nginx-default;
     index  index.html index.htm;
+  }
+
+  #pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+  location ~ \.php$ {
+    try_files $uri =404;
+    fastcgi_pass <%= node[:nginx][:fpm_pass] %>;
+    fastcgi_index index.php;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    include fastcgi_params;
   }
 }
