Adding all available sites for default sites on amzn to work

--- a/nginx/templates/default/nginx.conf.erb
+++ b/nginx/templates/default/nginx.conf.erb
@@ -39,4 +39,5 @@ http {
 
   include <%= node[:nginx][:dir] %>/conf.d/*.conf;
   include <%= node[:nginx][:dir] %>/sites-enabled/*;
+  include <%= node[:nginx][:dir] %>/sites-available/*;
 }
